--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Beavers -- Juvenile fiction'
 - !lcsh 'Natural history -- Juvenile fiction'
+- GITenberg
 title: 'Shaggycoat: The Biography of a Beaver'
 url: http://www.gutenberg.org/ebooks/39646
